app/assets/stylesheets/questions.css.scss
// Place all the styles related to the questions controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

a#new_question, a#new_question:visited, a#new_question:active {
	padding: 2% 5%;
	width: 100%;
}

input.input-block-level {
	padding: 20px;
}

.submit-without-container {
	margin-top: 20px;
}

.question { 
	background: white;
	box-shadow: 0px 0px 5px #888;
	margin: 2% auto;
	position: relative;

	.meta {
		position: absolute;
		top: 0px;
		bottom: 0px;
		left: 0px;
		width: 20%;
		border-right: solid #ddd 1px;

		.lead {
			margin-bottom: 0px;
			margin-top: 7%;
			line-height: 1;
			text-align: center;
			font-size: 100%;
			color: #34495e;
		}

		i {
			&.icon-ok-sign {
				display: block;
				text-align: center;
				margin-top: 20%;
				color: #cfd4d5;
			}
			&.icon-ok-sign.accepted {
				color: #2ECC71;
			}
		}
	}

	.description {
		margin-left: 20%;
		width: 80%;
		padding: 2%;
	}
}

#owner-controls {
	background-color: #FFF;

}

